# envy-safe

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs  secure.rs
