[package]
name = "cargo-envy-safe"
version = "0.1.0"
edition = "2021"
authors = ["Sergio Pereda <sergio@adtv.io>"]
description = "A secure and safe CLI to manage .env files in Rust projects"
license = "MIT"
readme = "README.md"
repository = "https://github.com/YOUR_USERNAME/envy-safe"
homepage = "https://github.com/YOUR_USERNAME/envy-safe"
keywords = ["dotenv", "cli", "env", "security", "config"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
dirs = "6.0.0"
toml = "0.9.2"

[[bin]]
name = "cargo-envy-safe"
path = "src/main.rs"